@@ -198,11 +198,30 @@ Then in the file
 
   Excluded content
 
-  # reveal being part1
+  # reveal begin part1
   Included content
   # reveal end part1
 
   Excluded content
+
+=head2 section
+
+  %= section begin
+  ...
+  % end
+
+A shortcut for creating a section tag.
+
+  %# longer form
+  %= tag section => ...
+
+=head2 markdown_section
+
+  %= markdown_section begin
+  ...
+  % end
+
+Build a section tag and script/template tag to properly use the built-in markdown handling within this slide.
 
 =head2 revealjs->export
 
